Fix fixed buttons position on mobile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -572,9 +572,9 @@ main {
 .fixed-buttons {
     position: fixed;
     left: 30px;
-    top: calc(100% - 150px);
+    transform: translateY(calc(100vh - 150px));
     height: 150px;
-    width: 50px;
+    width: calc(100% - 60px);
     z-index: 1;
     button {
         position: absolute;
@@ -609,6 +609,12 @@ main {
             left: 0;
             background-image: url("../img/icons/icons.svg#eye-icon");
             background-size: 31px 31px;
+        }
+        &.veiw-doc-button {
+            top: 70px;
+            font-size: 28px;
+            left: calc(100% - 50px);
+            background-size: 20px 20px;
         }
     }
 }
@@ -1753,27 +1759,6 @@ section {
 }
 .veiw-doc-button {
     display: none;
-    position: fixed;
-    left: calc(100% - 65px);
-    top: calc(100% - 70px);
-    width: 50px;
-    height: 50px;
-    border: none;
-    border-radius: 20px;
-    font-size: 28px;
-    background: #ffffffa4;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 20px 20px;
-    box-shadow: 0 3px 10px #0000001a;
-    transition: .2s ease;
-    backdrop-filter: blur(10px);
-    z-index: 1;
-    &:hover,
-    &:focus {
-        cursor: pointer;
-        box-shadow: 0px 3px 14px #0000002a;
-    }
 }
 @media (max-width: 1260px) {
     .page-article {
@@ -1794,10 +1779,11 @@ section {
     }
     .article-content {
         position: fixed;
+        left: 0;
+        top: 0;
         width: 100%;
         max-height: 400px !important;
-        left: 0;
-        top: 100%;
+        transform: translateY(100vh);
         padding: 12px;
         border-radius: 15px 15px 0 0;
         background: #ffffff;
@@ -1808,11 +1794,11 @@ section {
         box-sizing: border-box;
         &.active {
             visibility: visible;
-            transform: translateY(-100%);
         }
     }
-    .veiw-doc-button {
+    .veiw-doc-button.set {
         display: block;
+        background-color: #ffffff;
     }
 }
 @media (max-width: 768px) and (max-height: 550px) {
